# rumongo

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  index.d.ts  index.js  mongoxide-node-plan.md  package-lock.json  package.json  tsconfig.json
__tests__/integration/: basic.test.js  leak.test.js  pipeline.test.js
__tests__/lazy/: lazy.test.js
__tests__/model/: model.test.js
__tests__/parity/: parity.test.js
bench/: compare.js  concurrent.js  lazy.js  model.js  phase3.js  pipeline.js  poolbench.js  stream.js  suite.js  worker.js  worker_task.js
examples/: quickstart.js
src/: client.rs  collection.rs  cursor.rs  debug.rs  deserialize.rs  error.rs  findcursor.rs  lib.rs  rawdoc.rs
ts/: index.ts  model.ts  shadow.ts
worker/: pool-worker.js  pool.d.ts  pool.js
