[package]
name = "rumongo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi5", "tokio_rt"] }
napi-derive = "2"
mongodb = "3"
bson = "2"
tokio = { version = "1", features = ["sync", "rt"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"

[build-dependencies]
napi-build = "2"
